game.css
:root {
  --maincolor: #2A2A30;
  --secondcolor: #65cbf3;
  --thirdcolor: #3A3A40;
}

body {
  margin: 0;
  background-color: #65cbf3;
  font-family: system-ui;
  font-weight: 600;
}

.container {
  display: flex;
  padding: 10px;
  width: 100%;
  z-index: 2;
  box-shadow: 0 4px 13px 0 rgba(122, 122, 122, 0.2);
  align-items: center;
  max-height: 50px;
  position: fixed;
}

.infotop {
  color: var(--maincolor);
  font-size: 1rem;
  margin-left: 15px;
  border-radius: 10px;
  padding: 10px 20px;
}

#controldrop {
  position: absolute;
  width: max-content;
}

#dropdown {
  position: relative;
}

#dropdown:hover {cursor: pointer;}

/* Developer tools styling */

h1 {
  font-size: 16px;
  font-family: system-ui;
}

span {
  background-color: var(--thirdcolor);
  border-radius: 3px;
  font-family: monospace, sans-serif;
  margin-right: 10px;
  font-size: 14px;
  height: max-content;
  width: max-content;
  margin-bottom: 0;
  padding: 3px 10px;
}

#main {
  width: 300px;
  height: max-content;
  border-radius: 10px;
  position: absolute;
  top: 200px;
  left: 50px;
  display: block;
  font-family: monospace, sans-serif;
  color: white;
  position: fixed;
}

.control {
  background-color: var(--thirdcolor);
  height: 35px;
  width: calc(100% - 12px);
  border-radius: 10px 10px 0 0;
  display: flex;
  align-items: center;
  gap: 6px;
  justify-content: right;
  padding-right: 12px;
}

.content {
  padding: 20px;
  padding-top: 10px;
  display: grid;
  row-gap: 12px;
  border-radius: 0 0 10px 10px;
  background-color: var(--maincolor);
  font-family: system-ui;
  font-weight: 500;
}

.dragbox {
  width: calc(100% - 72px);
  border-radius: 10px 0 0 0;
  height: 30px;
}

.dragbox:hover {
  cursor: move;
}

.dataAfter {
  margin-left: 10px;
}

.button {
  background-color: var(--maincolor); 
  height: 18px;
  width: 72px;
  border-radius: 10px;
  position: relative;
  font-weight: 500;
}

.button::before {
  content: 'Close this window';
  padding: 6px 9px;
  position: absolute;
  left: 0;
  top: -40px;
  color: white;
  display: none;
  background-color: var(--thirdcolor);
  font-family: system-ui;
  width: max-content;
  font-size: 14px;
  border-radius: 3px;
}

.button:hover::before {
  display: block;
}

.button:hover {
  cursor: pointer;
}

.toggle-input {
  display: none;
}

#popup {
  display: none;
  background-color: #252529;
  border-radius: 0 0 10px 10px;
  margin-top: -10px;
  font-size: 14px;
  text-align: center;
  font-family: system-ui;
  padding: 10px 0 0 0
}

.cancel {
  background-color: var(--thirdcolor);
  border: none;
  color: white;
  font-family: system-ui;
  border-radius: 20px;
  padding: 10px 15px;
  margin-top: 10px;
}

.cancel:hover {
  background-color: #404047;
  cursor: pointer;
}

.permaDismiss:hover {
  text-decoration: underline;
  cursor: pointer;
}

.permaDismiss {
  color: white;
  font-size: 10px;
  text-decoration: none;
  margin-bottom: -5px;
}


canvas {
  display: block;
}
 
/* Key styling */
.key {
  width: 50px;
  height: 50px;
  background-color: white;
  border: solid 5px;
  border-color: black;
  border-radius: 10px;
  scale: 0.9;
  position: relative;
  display: flex;
  align-items: center;
}
 
.key:hover {
  background-color: whitesmoke;
  scale: 0.92;
}
 
.key::after {
  content: '';
  position: absolute;
  top: -9px;
  left: -9px;
  right: -9px;
  bottom: -9px;
  border: 5px solid white;
  border-radius: 14px;
  z-index: -2;
}
 
.key:hover::after {
  border-color: whitesmoke;
}
 
/* Arrow (Within key) styling */
.arrow {
  margin-left: auto;
  margin-right: auto;
}
 
.arrow2 {
  width: 20px;
  height: 5px;
  border-radius: 3px;
  background-color: black;
  transform: rotate(40deg);
}
 
.arrow3 {
  margin-top: 6px;
  transform: rotate(140deg);
}
 
/* Key container */
#keycontain2 {
  display: grid;
  grid-template-columns: 50px 50px 50px;
  gap: 17px;
  column-width: 50px;
  scale: 1.7;
  /*
 margin-left: ;
 margin-right: ;
 */
  height: 107px;
  width: 180px;
  position: fixed;
  bottom: 15vw;
  left: 52%;
  transform: translateX(-30%) rotate(180deg);
  width: clamp(90vw, 500px);
  padding: 0px;
  border-radius: 10px;
  box-sizing: border-box;
}
 
.bottom {
  align-self: end;
}
 
#keydown {
  margin-top: 6.5px;
  transform: rotate(90deg);
  translate: 0px 67px;
}
 
#keyup {
  transform: rotate(270deg);
}
 
#keyleft {
  transform: rotate(180deg);
}
#evasion {
  z-index: 10;
  position: fixed;
  top: 20px;
  left: 20px;
}
 
/*.keyright {}*/
/* Turn off on larger displays */
/*@media screen and (min-width: 800px) {
  .keycontain2 {
    display: none;
  }
}*/

